--- a/bio1.html
+++ b/bio1.html
@@ -96,13 +96,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/16rVu-eWNwQ0Ks-mcEdK_owcrtgf70Piu?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/16rVu-eWNwQ0Ks-mcEdK_owcrtgf70Piu?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1zveRA_JhhEehBlsAXWqu1giVTj3b0k96?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">TEST & EXAMPAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1zveRA_JhhEehBlsAXWqu1giVTj3b0k96?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">TEST & EXAMPAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1i8O4r7BanDhVhZ8mvQ2XYSl-HAk46rE7?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1i8O4r7BanDhVhZ8mvQ2XYSl-HAk46rE7?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -110,7 +110,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1Njt6Cp8dYdQY8TZKDq3_HRG-BmkoA2EN?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1Njt6Cp8dYdQY8TZKDq3_HRG-BmkoA2EN?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -120,21 +120,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1JLM5iYi7k0wBbBJKcgDTEH14j_hjeEaB?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1JLM5iYi7k0wBbBJKcgDTEH14j_hjeEaB?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1IHbVwoJ1q0dpDbZZvGgPOb2zxUTLsd2f?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1IHbVwoJ1q0dpDbZZvGgPOb2zxUTLsd2f?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/15jB4rWJmsiTeMyFLMqpK5YCx9-ahwxRp?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/15jB4rWJmsiTeMyFLMqpK5YCx9-ahwxRp?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/15EM-Roq-Vqtgi0Gy0wK9DtsjtrJBIi_p?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/15EM-Roq-Vqtgi0Gy0wK9DtsjtrJBIi_p?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
