--- a/bio3.html
+++ b/bio3.html
@@ -96,13 +96,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1RJSZEl16yIstmjpP38_INXm7UBaYOz-3?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1RJSZEl16yIstmjpP38_INXm7UBaYOz-3?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ZsMeADaxV4ymmaouvp2XBPB0KXnBDeRr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">TEST & EXAMPAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ZsMeADaxV4ymmaouvp2XBPB0KXnBDeRr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">TEST & EXAMPAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1y4ZL-4fXadZA7LnwJumnCICMXnBA7gpu?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1y4ZL-4fXadZA7LnwJumnCICMXnBA7gpu?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -110,7 +110,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1DhaW1pUSHVmLRWUKJ5cNq0pBSZLckAF3?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1DhaW1pUSHVmLRWUKJ5cNq0pBSZLckAF3?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -120,21 +120,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1GJEBtjXuRbZAEfZ-k0fZ01BVuJpwyv9t?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1GJEBtjXuRbZAEfZ-k0fZ01BVuJpwyv9t?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;" >OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ThpoLCJ3evR8Ja_1AZ8BWNo4qNHiLm_t?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ThpoLCJ3evR8Ja_1AZ8BWNo4qNHiLm_t?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/18lGhitiNFlhiyGDLhKVUlTRaBHabFwP5?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/18lGhitiNFlhiyGDLhKVUlTRaBHabFwP5?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1GIIZlfQg0bPUcmaYrvMpR0wIna9-PZuM?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1GIIZlfQg0bPUcmaYrvMpR0wIna9-PZuM?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
