--- a/bio4.html
+++ b/bio4.html
@@ -96,13 +96,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/14T_gXrLCiD6d2YjvHBrhxjVui1dmvJyD?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/14T_gXrLCiD6d2YjvHBrhxjVui1dmvJyD?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1NplagPoCQhw8owEOmi-rCJGOk2NYuz6o?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">TEST & EXAMPAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1NplagPoCQhw8owEOmi-rCJGOk2NYuz6o?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">TEST & EXAMPAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1YbJWaYfQQBV-toEfWYKeV3whDvsmPQIr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1YbJWaYfQQBV-toEfWYKeV3whDvsmPQIr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -110,7 +110,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1xfBu0ZZMuXLjsyqxS-yOSUt1tGz5ayX4?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1xfBu0ZZMuXLjsyqxS-yOSUt1tGz5ayX4?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -120,21 +120,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1QuCSe9ahFStO7_ZIcXB36qAycgBzIS6H?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1QuCSe9ahFStO7_ZIcXB36qAycgBzIS6H?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1EHskPoU0YrPTx4eP9ixQD8STD2cHdhtr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1EHskPoU0YrPTx4eP9ixQD8STD2cHdhtr?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1upRusYPMpmLOafM8YuofzLDCqmz8c2b-?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1upRusYPMpmLOafM8YuofzLDCqmz8c2b-?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1kJ7TEQYwxai7KecU-pKl9eHOXFdp_m-k?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1kJ7TEQYwxai7KecU-pKl9eHOXFdp_m-k?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
