--- a/bio6.html
+++ b/bio6.html
@@ -96,13 +96,13 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1RtIRYdKMceX3sf2sgMeDuwJJ6dkNSkjO?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">EXPERIMENTS,ACTIVITIES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1RtIRYdKMceX3sf2sgMeDuwJJ6dkNSkjO?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">EXPERIMENTS,ACTIVITIES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1Nh7UunUj2YGJs5jzjqqUYZjQGsf2-Bq2?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">TEST & EXAMPAPERS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1Nh7UunUj2YGJs5jzjqqUYZjQGsf2-Bq2?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">TEST & EXAMPAPERS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/134EGnKq0Y41e7cc9aHqSRXGcd8wSt8DW?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OFFLINE RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/134EGnKq0Y41e7cc9aHqSRXGcd8wSt8DW?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OFFLINE RECORDINGS</button></a>
                 </div>
 
 
@@ -110,7 +110,7 @@
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ivnX4q-9Qvh9mteY2clPiIbIlZWB4-Tm?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ivnX4q-9Qvh9mteY2clPiIbIlZWB4-Tm?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
             </div>
@@ -120,21 +120,21 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1PtjNNWxBdXX41tQHmuiIShfAgKIJ_fp4?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">OTHER RESOURCES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1PtjNNWxBdXX41tQHmuiIShfAgKIJ_fp4?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
                 </div>
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1vEg8IKNK3N7Gj3w8013V6nMxPFS55sIh?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHEETS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1vEg8IKNK3N7Gj3w8013V6nMxPFS55sIh?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHEETS</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ckl0VyPEAizwWxUdX2QG4soGlt8WsVuR?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">WORKSHOPS</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1ckl0VyPEAizwWxUdX2QG4soGlt8WsVuR?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">WORKSHOPS</button></a>
                 </div>
 
 
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1FlfAuJHlU6XZ8-Ua5twBwUlC_Js8qmIb?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1FlfAuJHlU6XZ8-Ua5twBwUlC_Js8qmIb?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
                 </div>
 
             </div>
