--- a/bio4.html
+++ b/bio4.html
@@ -96,7 +96,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1kJ7TEQYwxai7KecU-pKl9eHOXFdp_m-k?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1kJ7TEQYwxai7KecU-pKl9eHOXFdp_m-k?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;">BLACKBOARD NOTES</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
