--- a/bio6.html
+++ b/bio6.html
@@ -95,7 +95,7 @@
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1FlfAuJHlU6XZ8-Ua5twBwUlC_Js8qmIb?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1FlfAuJHlU6XZ8-Ua5twBwUlC_Js8qmIb?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="_blank" href="https://drive.google.com/drive/folders/1ivnX4q-9Qvh9mteY2clPiIbIlZWB4-Tm?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
