--- a/bio1.html
+++ b/bio1.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1Njt6Cp8dYdQY8TZKDq3_HRG-BmkoA2EN?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nza80QGmajBlakThCbw_MUO"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
