--- a/bio1.html
+++ b/bio1.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nza80QGmajBlakThCbw_MUO"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=ufUbCcMwNUw&list=PLFb27aoRQJisXExDl-o2zTTng3s1YXBrE"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
