--- a/bio3.html
+++ b/bio3.html
@@ -51,12 +51,16 @@
               <span class="course" >BIOLOGY</span>
               </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="bio1.html"><span class="sub">THE FUNDAMENTAL UNIT OF LIFE</span></a>
-                        <a class="dropdown-item" href="bio2.html"><span class="sub">TISSUES</span></a>
-                        <a class="dropdown-item" href="bio3.html"><span class="sub">DIVERSITY IN LIVING ORGANISMS</span></a>
-                        <a class="dropdown-item" href="bio4.html"><span class="sub">WHY DO WE FALL ILL</span></a>
-                        <a class="dropdown-item" href="bio5.html"><span class="sub">NATURAL RESOURCES</span></a>
-                        <a class="dropdown-item" href="bio6.html"><span class="sub">IMPROVEMENT IN FOOD RESOURCES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">CLASS 10TH- LIFE PROCESSES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- CONTROL AND COORDINATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">CLASS 9TH- THE FUNDAMENTAL UNIT OF LIFE</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">CLASS 9TH- TISSUES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">CLASS 9TH- DIVERSITY IN LIVING ORGANISMS</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio4.html"><span class="sub">CLASS 9TH- WHY DO WE FALL ILL</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio5.html"><span class="sub">CLASS 9TH- NATURAL RESOURCES</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio6.html"><span class="sub">CLASS 9TH- IMPROVEMENT IN FOOD RESOURCES</span></a>
+
+                       
 
                     </div>
                 </div>
