--- a/bio7.html
+++ b/bio7.html
@@ -52,7 +52,7 @@
               </button>
                     <div class="dropdown-menu">
                                     <a target="_blank" class="dropdown-item" href="bio7.html"><span class="sub">CLASS 10TH- LIFE PROCESSES</span></a>
-                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- CONTROL AND COORDINATION</span></a>
+                                    <a target="_blank" class="dropdown-item" href="bio8.html"><span class="sub">CLASS 10TH- HEREDITY AND EVOLUTION</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio1.html"><span class="sub">CLASS 9TH- THE FUNDAMENTAL UNIT OF LIFE</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio2.html"><span class="sub">CLASS 9TH- TISSUES</span></a>
                                     <a target="_blank" class="dropdown-item" href="bio3.html"><span class="sub">CLASS 9TH- DIVERSITY IN LIVING ORGANISMS</span></a>
